--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -6,6 +6,9 @@ edit_uri: edit/main/docs
 plugins:
   - techdocs-core
 
+markdown_extensions:
+  - markdown_inline_mermaid
+
 # For sidebar navigation on https://backstage.io/, see `microsite/sidebars.js`
 nav:
   - Home: 'index.md'
